@@ -1,4 +1,13 @@
 htmldir=$(pkglibdir)/www
-html_DATA=browser.html cbrowser.html
+noinst_DATA=browser.html cbrowser.html
+
+install-data-local:
+	test -z "$(htmldir)" || $(mkdir_p) "$(DESTDIR)$(htmldir)"
+	( \
+		for f in $(noinst_DATA) ; do \
+			test ! -f $(DESTDIR)$(htmldir)/$$f && $(INSTALL_DATA) $$f $(DESTDIR)$(htmldir)/$$f ; \
+		done ; \
+		exit 0 \
+	)
 
 EXTRA_DIST= browser.html cbrowser.html
